@@ -12,7 +12,8 @@ base-installer (1.14) UNRELEASED; urgency=low
         allows base-installer to pick a usable kernel even if the one it
         actually wants isn't on the CD. See kernel/README.
       + Add a test suite for kernel selection, only for alpha, arm, hppa,
-        i386, powerpc, s390, and sparc so far. See kernel/tests/README.
+        i386, ia64, m68k, mips, powerpc, s390, and sparc so far. See
+        kernel/tests/README.
       + Make sure all the kernels displayed in
         base-installer/kernel/which-kernel are usable.
     - Please DO NOT UPLOAD this to unstable until sarge has been released.
